# dewolf-idioms

./: LICENSE  Plugin.json  README.md  __init__.py  config.py  main.py  pyproject.toml  requirements.txt  safe_eval.py  setup.py
compiler_idioms/: anonymization.py  config.py  match.py  matcher.py  utils.py
compiler_idioms/disassembly/: binja_disassembly.py  smda_disassembly.py
compiler_idioms/idiom/: idiom.py  instruction_sequence.py
compiler_idioms/idiom/implementations/: division.py  division86.py  division_unsigned.py  divs_msvc.py  divu.py  divu86.py  divu_msvc.py  mods.py  mods_msvc.py  modu_msvc.py  modulo_unsigned.py  multiplication.py  remainder_signed_todo.py
compiler_idioms/idiom/utils/: combine_clusters_to_single_file.py  magic.py  magic_long.py  magic_map_long.json  magic_unsigend.py  pattern_utils.py
compiler_idioms/patterns/: patterns-divs-long-long-O0.json  patterns-divs-long-long-O3.json  patterns-divs-long-long-Os.json  patterns-mods-long-long-O2.json  patterns-mods-long-long-Os.json
patterns/: patterns-divs-long-long-O1.json  patterns-divs-long-long-O2.json  patterns-mods-long-long-O0.json  patterns-mods-long-long-O1.json  patterns-mods-long-long-O3.json
scripts/: main.py
test_samples/: dga2-newest.exe.bndb  division  division.bndb  divs-10-binary  divs-10-binary.bndb  divs.json  mods-new.json  mods-pointer.json  mods.json  pattern-divs-258.json  test.json
tests/: diassembly.json  pattern-muls-o0.yaml  test_divs.py  test_divu.py  test_godbolt.py  test_mods.py  test_smda.py
